--- a/html/photo-contest.html
+++ b/html/photo-contest.html
@@ -6,7 +6,7 @@
     <title>Concours photos</title>
     <link rel="stylesheet" href="../style/main.css">
     <link rel="stylesheet" href="../style/photo.css">
-    <link rel="icon" type="image/vnd.icon" href="data/favicon.ico">
+    <link rel="icon" type="image/vnd.icon" href="../data/favicon.ico">
 </head>
 <body>
     <div id="header"></div>
