--- a/html/about.html
+++ b/html/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A propos</title>
     <link rel="stylesheet" href="../style/main.css">
+    <link rel="stylesheet" href="../style/about.css">
     <link rel="icon" type="image/vnd.icon" href="../data/favicon.ico">
 </head>
 <body>
@@ -22,8 +23,12 @@
             <p>
                 Cette journée est organisée par les doctorants élus au conseil de l'école doctorale avec le support de l'école doctorale. Merci à l'équipe: Tarek Bouzar, Florian Crouau, Joanna d'Antoni, Margaux Francois, Pierre Minier, Joshua Mounier, Josue Nkaya-Nkaya, Christian Robinet De Saint-Omer.
             </p>
+
+        </section>
+        <section class="card">
+            <h2>Précédentes journées</h2>
             <p>
-                Le site de l'édition 2024 est disponible <a href="https://jed-spi2024.sciencesconf.org/">ici</a>.
+                 <a target="_blank" href="https://jed-spi2022.sciencesconf.org/"class="btn">2022</a> <a target="_blank" href="https://jed-spi2023.sciencesconf.org/" class="btn">2023</a> <a target="_blank" href="https://jed-spi2024.sciencesconf.org/" class="btn">2024</a>
             </p>
         </section>
         <nav id="navigation">
