--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                     <span id="lieu">À définir</span>
                 </div>
             </div>
-
-            <p><a href="https://linktr.ee/jed_spi" class="btn">Votes</a></p>
+            <p><a href="https://linktr.ee/jed_spi" class="btn2">Votes</a></p>
         </section>
 
         <section id="programme" class="card">
