--- a/html/about.html
+++ b/html/about.html
@@ -26,6 +26,12 @@
 
         </section>
         <section class="card">
+            <h2>Données personnelles</h2>
+            <p>
+                Les personnes présentant au cours de la journée (orale ou poster) ont leur nom affiché, ainsi que, pour la plupart, leur CV et abstract. Ces données sont publiées dans l'intérêt légitime de cet événement. Elles resteront accessibles après l'événement. Toute demande de suppression peut être adressée à <a href="mailto:pierre.minier@u-bordeaux.fr">pierre.minier@u-bordeaux.fr</a>, et sera traitée sous 30 jours conformément au RGPD.
+            </p>
+        </section>
+        <section class="card">
             <h2>Précédentes journées</h2>
             <p>
                  <a target="_blank" href="https://jed-spi2022.sciencesconf.org/"class="btn">2022</a> <a target="_blank" href="https://jed-spi2023.sciencesconf.org/" class="btn">2023</a> <a target="_blank" href="https://jed-spi2024.sciencesconf.org/" class="btn">2024</a>
