--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Journée ED SPI 2025</title>
-    <link rel="stylesheet" href="style/main.css">
-    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="style/2025/main.css">
+    <link rel="stylesheet" href="style/2025/index.css">
     <link rel="icon" type="image/vnd.icon" href="data/favicon.ico">
 </head>
 <body>
@@ -35,17 +35,17 @@
 
         <nav id="navigation">
             <ul>
-                <li><a href="./html/poster-sessions-1.html" class="btn">1ère session posters</a></li>
-                <li><a href="./html/poster-sessions-2.html" class="btn">2ème session posters</a></li>
-                <li><a href="./html/photo-contest.html" class="btn">Galerie photos</a></li>
-                <li><a href="./html/about.html" class="btn">À propos</a></li>
+                <li><a href="./html/2025/poster-sessions-1.html" class="btn">1ère session posters</a></li>
+                <li><a href="./html/2025/poster-sessions-2.html" class="btn">2ème session posters</a></li>
+                <li><a href="./html/2025/photo-contest.html" class="btn">Galerie photos</a></li>
+                <li><a href="./html/2025/about.html" class="btn">À propos</a></li>
             </ul>
         </nav>
     </main>
 
     <footer id="footer"></footer>
 
-    <script src="script/load_header-footer.js"></script>
+    <script src="script/2025/load_header-footer.js"></script>
     <script>
         fetch("https://jed-spi.github.io/data/schedule.json")
             .then(response => response.json())
