2 remise en vie du site ? x)

--- a/index_2025.html
+++ b/index_2025.html
@@ -47,7 +47,7 @@
 
     <script src="script/2025/load_header-footer.js"></script>
     <script>
-        fetch("https://jed-spi.github.io/data/schedule.json")
+        fetch("https://jed-spi.github.io/data/2025/schedule.json")
             .then(response => response.json())
             .then(data => {
                 document.getElementById('date').textContent = data.date;
