--- a/index_2026.html
+++ b/index_2026.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Journée ED SPI 2025</title>
-    <link rel="stylesheet" href="style/main.css">
-    <link rel="stylesheet" href="style/index.css">
+    <title>Journée ED SPI 2026</title>
+    <link rel="stylesheet" href="style/2026/main.css">
+    <link rel="stylesheet" href="style/2026/index.css">
     <link rel="icon" type="image/vnd.icon" href="data/favicon.ico">
 </head>
 <body>
@@ -13,7 +13,7 @@
 
     <main>
         <section id="infos-pratiques" class="card">
-            <h2>Journée ED SPI 2025</h2>
+            <h2>Journée ED SPI 2026</h2>
 
             <div class="info-container">
                 <div class="info-row">
@@ -35,19 +35,19 @@
 
         <nav id="navigation">
             <ul>
-                <li><a href="./html/poster-sessions-1.html" class="btn">1ère session posters</a></li>
-                <li><a href="./html/poster-sessions-2.html" class="btn">2ème session posters</a></li>
-                <li><a href="./html/photo-contest.html" class="btn">Galerie photos</a></li>
-                <li><a href="./html/about.html" class="btn">À propos</a></li>
+                <li><a href="./html/2026/poster-sessions-1.html" class="btn">1ère session posters</a></li>
+                <li><a href="./html/2026/poster-sessions-2.html" class="btn">2ème session posters</a></li>
+                <li><a href="./html/2026/photo-contest.html" class="btn">Galerie photos</a></li>
+                <li><a href="./html/2026/about.html" class="btn">À propos</a></li>
             </ul>
         </nav>
     </main>
 
     <footer id="footer"></footer>
 
-    <script src="script/load_header-footer.js"></script>
+    <script src="script/2026/load_header-footer.js"></script>
     <script>
-        fetch("https://jed-spi.github.io/data/schedule.json")
+        fetch("https://jed-spi.github.io/data/2026/schedule.json")
             .then(response => response.json())
             .then(data => {
                 document.getElementById('date').textContent = data.date;
