--- a/index_2026.html
+++ b/index_2026.html
@@ -29,7 +29,7 @@
         </section>
 
         <section id="programme" class="card">
-            <h2>Programme de la Journée</h2>
+            <h2>Programme de la Journée (temporaire)</h2>
             <ul id="programme-list"></ul>
         </section>
 
